@@ -123,6 +123,7 @@
 
 ;;; Version control
 (straight-use-package 'magit)
+(straight-use-package 'git-modes)
 (straight-use-package 'forge)
 (straight-use-package 'diff-hl)
 
