@@ -1,62 +1,60 @@
 (("adaptive-wrap" . "d75665b9c88e65f91dadd1e5880905bbdb7c09b7")
  ("anaphora" . "a755afa7db7f3fa515f8dd2c0518113be0b027f6")
- ("apheleia" . "7eaaf3f45703d49e494f6dd0555633cf6b355817")
- ("auctex" . "25c7ff64f3e57f695ffed464a7beccbfa4e98555")
+ ("apheleia" . "f3308f53d3fd15b808abc583fa4c50a197f0d1e9")
+ ("auctex" . "5a72ed941498876f07bb98c3f8f40966e0232370")
  ("autocrypt" . "b169c0474e7791599adccb2e727cd9b05ae3b049")
  ("blackout" . "7707211370f03f03a2f74df15f42ac24a1e99300")
  ("breadcrumb" . "e06a07d5399dbe313aae7b806bd8c12634b27272")
  ("browser-hist.el" . "1cd80081feaab99fef9e8eadd55d68b3cef90144")
  ("buffer-env" . "fc5cab4db55f0b95c4b97fbe3104e394da34b91a")
- ("bufferlo" . "7676a3a05de63bcbfa5f9a99c32f22cb13fd2b5f")
- ("cape" . "c9191ee9e13e86a7b40c3d25c8bf7907c085a1cf")
+ ("cape" . "f925182957ea11119e27c2ac7200cc1fbba5612a")
  ("chez" . "605a81ff7b2d2b275a3ec68e3ce7e5b50f85014d")
  ("chicken" . "5f2c1bb446af6ae4aec9c8d74d4ecb34031706fd")
  ("citre" . "3e3c6e539c41c880f9d10ef7424cd0d2adcf3151")
  ("clipetty" . "01b39044b9b65fa4ea7d3166f8b1ffab6f740362")
  ("closql" . "05a2b048fd4e5c90aa971479cb9e71cf9aeba2bf")
  ("cmake-mode" . "b08b5d9045308362a623a4f576896d55ffecfd52")
- ("colorful-mode" . "e509992322d959568a3d53db7f62de4e1934139a")
- ("compat" . "2aee8353772745bb18db1ca63729a7f5ea572a74")
- ("consult" . "b6fd7feda74267a53f9f1cf1bd122e519a308132")
+ ("colorful-mode" . "cb6d711a52bbaeb3a5afb6d27908103012c1330e")
+ ("compat" . "97f24af413a38a7f1aaedb29f5aaaa333796a5b4")
+ ("consult" . "d32cccdcb5559b503306291fa9f52df19594d687")
  ("consult-dir" . "4532b8d215d16b0159691ce4dee693e72d71e0ff")
  ("consult-eglot" . "2816f8aad7d6a1e6d5e5b4a5e04c1d74b82b26b8")
  ("consult-everything" . "ac574a63b3e869787bbe6354b57a7a8021647ee3")
- ("copilot-chat.el" . "edd0e06d000f045464980ab2aedc479a7ad16f71")
- ("copilot.el" . "fe3f51b636dea1c9ac55a0d5dc5d7df02dcbaa48")
- ("corfu" . "e032f32c7ff24f5aaa44946551920aa94cd2a7f9")
+ ("copilot.el" . "4f51b3c21c42756d09ee17011201ea7d6e18ff69")
+ ("corfu" . "5e9a2229322541c1ee28b72128cf7c097b32dd5d")
  ("corfu-terminal" . "501548c3d51f926c687e8cd838c5865ec45d03cc")
  ("dash.el" . "fcb5d831fc08a43f984242c7509870f30983c27c")
  ("deadgrep" . "edb1957d0d6033698c6784686b27508034003fa0")
  ("debian-el" . "bc36846aa2a185a580a7f06230b32d38459fb324")
  ("devdocs.el" . "4023409017d37dc2d6c230fe010fadb917b4395b")
- ("diff-hl" . "9b032018fda8eb6c241bba1ec0e5c354ad523b2c")
+ ("diff-hl" . "f1228602bfaac831e65394967ed70bd3c4264b24")
  ("dpkg-dev-el" . "042404f71699a1cbc1377994eeecef261acf7476")
  ("eat" . "c8d54d649872bfe7b2b9f49ae5c2addbf12d3b99")
  ("editorconfig-emacs" . "d2beb3ec2e7f84505818594124a7202d5d6d0185")
- ("eglot" . "27bbb5113862b834737ad1e9c86c93dbc22e8e5e")
+ ("eglot" . "a8cb16b833d6e8b6e9ea6b995a82b14fee0eb398")
  ("eglot-tempel" . "c6c9a18eba61f6bae7167fa62bab9b637592d20d")
  ("eldoc" . "1d11743436e9ce0d11529bfdf1e548e64f31a92e")
  ("eldoc-box" . "fb1ae42c37c5f3bb80b441b2fdfada914891a714")
  ("eldoc-diffstat" . "33aa6d7ee5d0e712b112c74ec6e076463b540e9e")
- ("emacs-aio" . "da93523e235529fa97d6f251319d9e1d6fc24a41")
+ ("elfeed" . "6d9bfd01909433f205c7bf5b4661201ee51b956d")
  ("emacs-async" . "bb3f31966ed65a76abe6fa4f80a960a2917f554e")
- ("emacs-reader" . "b81d08af119f50ac0032e0dc7df260c9e6212be7")
- ("emacs-repeat-fu" . "c7707c98730bb3ffaf84aeed341fae3cf35c314b")
- ("emacs-request" . "c22e3c23a6dd90f64be536e176ea0ed6113a5ba6")
- ("emacs-rime" . "e6bb1908152b1e6a39025458676e04d899416c6f")
+ ("emacs-repeat-fu" . "b91d55001cca71e5df7a9f665c7da73ab9f55efd")
+ ("emacs-rime" . "89c71f1077a9a30ff97a8775f26ade58ece9b2a6")
+ ("emacs-web-server" . "3982c55e9061475038a3ccd61aecb2de3d407cec")
  ("emacsql" . "ced062890061b6e4fbe4d00c0617f7ff84fff25c")
- ("embark" . "2941f2ea36d61c1a84c3f79ebe47d604c9a92b5d")
+ ("embark" . "89c7610fa7988b6c93029f87afa4ba6b7768bf81")
  ("erc" . "851a022bd920cc7ce29ea5f892208b394f1dae9e")
  ("external-completion" . "c96acdcf0784215b0a7a5eaf94de3b7a855ed719")
  ("f.el" . "931b6d0667fe03e7bf1c6c282d6d8d7006143c52")
  ("flymake" . "9550c2c7d9809559f8db7507927d0931a7a666b3")
- ("forge" . "c755060831f3fb3365eb876f9b7646f41dd70eb9")
+ ("forge" . "c39791ae9dbf99a78fe86d1d1036d9c9b02cbe92")
  ("ftable" . "b70448464de92ca9cc93c766044dc6f39f4ad11a")
  ("geiser" . "c1c27072a46a959fa28f963c5e381e219916f85a")
- ("ghub" . "97a07691efad6fc16bc000a35be80d4f8dae251a")
+ ("ghub" . "855706740689a5d5c821be1210f661a262b7a46d")
+ ("git-modes" . "27af84f31ed022267b7108ad10ea286631f88e88")
  ("go-mode.el" . "0ed3c5227e7f622589f1411b4939c3ee34711ebd")
- ("goggles" . "5176114e99d4c13f57777abbcbcea0dbee9e4ca3")
- ("gptel" . "94bf19da93aee9a101429d7ecbfbb9c7c5b67216")
+ ("goggles" . "995454cade76a4da3430dd407ae2d9652327c36d")
+ ("gptel" . "e9d92423d138e6f217a494ac4b28fe68d349233a")
  ("gptel-quick" . "495b5e0b5348dbced1448bd12cbf8847e30b5175")
  ("guile" . "a0f111f8dedd31c593c4ed12c0b99745f3c1340f")
  ("hl-todo" . "7ed8bbcadb5229d648b194e0e4c4d261825aa91b")
@@ -65,27 +63,27 @@
  ("jsonrpc" . "444cafedd091815e674b6c93458ba97a55a76928")
  ("let-alist" . "35a1dae3c540705433a510c13c8af80206b29b5f")
  ("lin" . "0607a6a618a8bb791cecf47e754f81e28dcb5c92")
- ("llama" . "6a67e4253cc02aa9ce85ef96290c95198b65d913")
+ ("llama" . "0cc2daffded18eea7f00a318cfa3e216977ffe50")
  ("logos" . "331ec77e8ec75327d668d835fc743edd629f7af6")
- ("magit" . "fd1882b8c981c5e859522bde1dd9c88af9485709")
- ("marginalia" . "0e7097051cbcedcc4da9b633406291d4052ec0e4")
- ("markdown-mode" . "7c20685df615469132763add897c1ca37cbe07e4")
+ ("magit" . "5b820a1d1e94649e0f218362286d520d9f29ac2c")
+ ("marginalia" . "aa8e48b86f66739a86fb2e180103f8f9682004be")
+ ("markdown-mode" . "7c51a2167c5a1330e0ab52fe5b2d03c1ead122ca")
  ("mathjax" . "84e5fd902d83c11460e008de8ed0aef74cb9a62a")
  ("meow" . "e5817f3b5ef82cbcf8a729af205191dc6b142282")
  ("meow-tree-sitter" . "b05d54a5e19f8ba0258b0bbf0ffcd4bc7bad112c")
  ("meson-mode" . "0449c649daaa9322e1c439c1540d8c290501d455")
- ("modus-themes" . "3576d14f06f245c3111496bfb035bb0926f48089")
+ ("modus-themes" . "6639604271fc5bef2dcdd2b0af2d9bcb2259f8b6")
  ("nerd-icons-completion" . "e15e21a263bad06424982c11e8d68ffe1372a4e7")
  ("nerd-icons-corfu" . "55b17ee20a5011c6a9be8beed6a9daf644815b5a")
- ("nerd-icons-grep" . "83418f928f995e4edabae61fbc1ace48fcdb2746")
+ ("nerd-icons-grep" . "7179ff3384efce53f7de2f3c1a98070a310a10da")
  ("nerd-icons-ibuffer" . "d9f41469e46bcf7b4ae0dd0b1ce1abe15c191a53")
- ("nerd-icons-multimodal" . "7895496cffa03216aff2142c481dab0a2ccdd49d")
- ("nerd-icons.el" . "d972dee349395ffae8fceae790d22fedc8fe08e8")
- ("nongnu" . "9ee5a7657a22e836618813c2e2b64a548d27d2ff")
+ ("nerd-icons-multimodal" . "7aa38d32fd36b68e66015433ad35b35d1e3d5a5f")
+ ("nerd-icons.el" . "4476b4cabe63f5efafa3c0a8b370db4f6a92e90c")
+ ("nongnu" . "67c49cfdf5a5a9f28792c500c8eb0017cfe74a3a")
  ("olivetti" . "845eb7a95a3ca3325f1120c654d761b91683f598")
- ("orderless" . "254f2412489bbbf62700f9d3d5f18e537841dcc3")
- ("org" . "942249c996ed4ecfdcef5ae9c90c2eeef1718b56")
- ("org-modern" . "a58534475b4312b0920aa9d3824272470c8e3500")
+ ("orderless" . "082a487f79ca5e960046a31599a5f97dac79a858")
+ ("org" . "b89fda2c7eac2d319a370ecc644107e4156561aa")
+ ("org-modern" . "1723689710715da9134e62ae7e6d41891031813c")
  ("outline-minor-faces" . "cb06d2db125ba65fb8c4eb7e5dc6cc6bf3b6dc7e")
  ("p-search" . "38a66610a094d4026aaf7733148582375387fd99")
  ("paredit" . "af075775af91f2dbc63b915d762b4aec092946c4")
@@ -94,36 +92,34 @@
  ("pdf-tools" . "30b50544e55b8dbf683c2d932d5c33ac73323a16")
  ("peg" . "c9155d5586909953861421ce05a341d59b53fa73")
  ("persist" . "706970cf44ba797d67c0a22deabf494067112dd8")
- ("polymode" . "a8ad41fa00c6d58ad730026785665c074dd7fe16")
  ("popon" . "bf8174cb7e6e8fe0fe91afe6b01b6562c4dc39da")
  ("popup-el" . "24dd22186403a6566c26ce4996cdb1eedb1cc5cd")
  ("posframe" . "12f540c9ad5da09673b2bca1132b41f94c134e82")
  ("prism.el" . "2fa8eb5a9ca62a548d33befef4517e5d0266eb28")
- ("project" . "de0deb8dbfb65eae6eaaf45aea77f12aa9a25f89")
+ ("project" . "778c0cdaa1fec7bb89d419004dec6ff81824f043")
  ("pulsar" . "f2bec3976a7f63c2c13d4a8e695c028860a8bb81")
  ("pyim" . "64731c213cf50f44f44f9a7d1ab269b387e66663")
  ("pyim-basedict" . "55d9b324831b0fc79ff62f1c6f21aad72341a114")
- ("rust-mode" . "25d91cff281909e9b7cb84e31211c4e7b0480f94")
+ ("rust-mode" . "f7334861bfc1d3dbcfbde464751837be2ec09ef3")
  ("s.el" . "dda84d38fffdaf0c9b12837b504b402af910d01d")
  ("seq" . "da86da9bf111f68fb81efd466d76d53af5aebc00")
- ("shell-maker" . "b55e2e8d28f1c0ecac1d45b4a299ddddc42f479f")
  ("show-font" . "0e762a6badd54ba6591594464f42047ad4f73886")
  ("sly" . "63131ef965d8ff3a6b79cc7aff8e8f5fc1a82aec")
  ("spinner" . "fa117f0893788f3fe24673715a6b83bb34d238dd")
  ("systemd-mode" . "8742607120fbc440821acbc351fda1e8e68a8806")
  ("tablist" . "fcd37147121fabdf003a70279cf86fbe08cfac6f")
- ("tempel" . "04bd2e418d7002e740814671a98cbbbed84032c0")
+ ("tempel" . "9fa2c59660fe9473429a51872d3c00e1b95cab86")
  ("term-keys" . "5677d06daad83bdf355ad2746c4582475cd0d3f8")
  ("toml-mode.el" . "f6c61817b00f9c4a3cab1bae9c309e0fc45cdd06")
  ("transducers.el" . "a0b929ba76cdf081c8c5c005e364b57bc93d5bbe")
- ("transient" . "13daf473d5080b91bc37f40e0f3b566738707914")
+ ("transient" . "49bbb29fd34b807948d4f2b91f61587c12a595f0")
  ("treepy.el" . "651e2634f01f346da9ec8a64613c51f54b444bc3")
- ("ultra-scroll" . "489adeda7380b97d8f5d61d43082cd2d96b55b58")
+ ("ultra-scroll" . "3dd35e9a2aa327ddf889bd0f3341a81d3215862b")
  ("vala-mode" . "d696a8177e94c81ea557ad364a3b3dcc3abbc50f")
  ("valign" . "8b0002844cb6012ac4f8952e255c165e0e3be5b6")
- ("vertico" . "751c9ad527f14750ef10543fa64b39cf778d6206")
+ ("vertico" . "d8dc49a3520ab908c2b0f62a4a8ae32ca23f2726")
  ("visual-fill-column" . "e391b52922086ac38397a3325933900b6d90f9f0")
- ("vundo" . "5a666b34e4f609cca77b4a07b97b38581deb7e7e")
+ ("vundo" . "f57937d7f57e6d081f567debf14f11d87a28962f")
  ("with-editor" . "f32cd7b09d518b629bfaa3eeb92b539891c6b9bc")
  ("xr" . "cbcb51d5ba2a28c47264ddd17ac4ff0c89b0451e")
  ("xref" . "63b5875528e9c8dba3abbc76dae1b49351273c1c")
